--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,53 @@
 #testing {
-	background: antiquewhite
+	background: antiquewhite;
+}
+
+.quote {
+	margin-bottom: 1rem;
+	border: 2px solid #0000005c;
+	border-radius: 10px;
+	padding: 1rem;
+	margin: .5rem;
+	background: lavender;
+}
+
+.options {
+	display: flex;
+}
+
+.question-section {
+	flex-direction: row !important;
+	flex-wrap: wrap;
+}
+
+.question-image, .question-text {
+	width: 50%;
+	flex-grow: 1;
+	padding: 2rem;
+}
+
+.question-image {
+	object-fit: contain;
+	align-self: flex-start;
+	min-width: 400px;
+}
+
+.card-img-top {
+	aspect-ratio: 1;
+	object-fit: cover;
+}
+
+.options .card {
+	margin-right: 1rem;
+	margin-top: 1rem;
+}
+
+.options .card-body {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.data-reveal img {
+	width: 100%;
 }
